i18n - japanese and english

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,5 +11,9 @@
 
   <body>
     <%= yield %>
+    <div class = "change_language" >
+      <%= link_to t(".english"), locale:"en" %>
+      <%= link_to t(".japanese"), locale:"ja" %>
+    </div>
   </body>
 </html>
