--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -28,6 +28,8 @@
   </tbody>
 </table>
 
+<%= paginate @books, theme: 'twitter-bootstrap-3'%>
+
 <br>
 
 <%= link_to t('views.common.new'), new_book_path %>
