--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,6 +10,13 @@
   <%= @user.name %>
 </p>
 
+<% if @user.icon.attached? %>
+  <p>
+    <strong><%= User.human_attribute_name(:icon) %>:</strong>
+    <%= @user.icon %>
+  </p>
+<% end %>
+
 <p>
   <strong><%= User.human_attribute_name(:postal_code) %>:</strong>
   <%= @user.postal_code %>
