--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,6 +5,7 @@
     <tr>
       <th><%= User.human_attribute_name(:email) %></th>
       <th><%= User.human_attribute_name(:name) %></th>
+      <th><%= User.human_attribute_name(:icon)%></th>
       <th><%= User.human_attribute_name(:postal_code) %></th>
       <th><%= User.human_attribute_name(:address) %></th>
       <th></th>
@@ -16,6 +17,7 @@
       <tr>
         <td><%= user.email %></td>
         <td><%= user.name %></td>
+        <td><%= user.icon %></td>
         <td><%= user.postal_code %></td>
         <td><%= user.address %></td>
         <td><%= link_to t('views.common.show'), user %></td>
