--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,9 +3,9 @@
 <table>
   <thead>
     <tr>
+      <th></th>
       <th><%= User.human_attribute_name(:email) %></th>
       <th><%= User.human_attribute_name(:name) %></th>
-      <th><%= User.human_attribute_name(:icon)%></th>
       <th><%= User.human_attribute_name(:postal_code) %></th>
       <th><%= User.human_attribute_name(:address) %></th>
       <th></th>
@@ -15,9 +15,14 @@
   <tbody>
     <% @users.each do |user| %>
       <tr>
+        <td>
+          <% if user.avatar.attached? %>
+            <%= image_tag user.avatar.variant(resize_to_fill: [30, 30])%>
+          <% end %>
+        </td>
         <td><%= user.email %></td>
         <td><%= user.name %></td>
-        <td><%= user.icon %></td>
+        <td><%= user.avatar %></td>
         <td><%= user.postal_code %></td>
         <td><%= user.address %></td>
         <td><%= link_to t('views.common.show'), user %></td>
