--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,13 @@
 <h1><%= t('views.common.title_show', name: User.model_name.human) %></h1>
 
+<% if @user.avatar.attached? %>
+  <p>
+    <strong><%= User.human_attribute_name(:avatar) %>:</strong>
+    <br>
+    <%= image_tag @user.avatar.variant(resize_to_fill: [150, 150])%>
+  </p>
+<% end %>
+
 <p>
   <strong><%= User.human_attribute_name(:email) %>:</strong>
   <%= @user.email %>
@@ -9,13 +17,6 @@
   <strong><%= User.human_attribute_name(:name) %>:</strong>
   <%= @user.name %>
 </p>
-
-<% if @user.icon.attached? %>
-  <p>
-    <strong><%= User.human_attribute_name(:icon) %>:</strong>
-    <%= @user.icon %>
-  </p>
-<% end %>
 
 <p>
   <strong><%= User.human_attribute_name(:postal_code) %>:</strong>
