--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -33,6 +33,38 @@
   <% end %>
 </p>
 
+<% @user ||= current_user %>
+  <div class="stats">
+    <a href="<%= following_user_path(@user) %>">
+      <strong id="following" class="stat">
+        <%= @user.followings.count %>
+      </strong>
+      following
+    </a>
+
+    <a href="<%= followers_user_path(@user) %>">
+      <strong id="followers" class="stat">
+        <%= @user.followers.count %>
+      </strong>
+      followers
+    </a>
+    </div>
+
+<% unless current_user == @user %>
+  <div id="follow_form">
+  <% if current_user.following?(@user) %>
+    <%= form_with(url: user_follow_relationship_path(@user), method: :delete, remote: true ) do |f| %>
+      <%= f.submit "Unfollow", class: "btn" %>
+    <% end %>
+  <% else %>
+    <%= form_with(url: user_follow_relationships_path(@user), remote: true) do |f| %>
+      <div><%= hidden_field_tag :followed_id, @user.id %></div>
+      <%= f.submit "Follow", class: "btn btn-primary" %>
+    <% end %>
+  <% end %>
+  </div>
+<% end %>
+
 <% if current_user == @user %>
   <%= link_to t('views.common.edit'), edit_user_registration_path %> |
 <% end %>
