--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -7,10 +7,10 @@
 
 <p>
   <strong><%= Report.human_attribute_name(:content) %>:</strong>
-  <%= @report.memo %>
+  <%= @report.content %>
 </p>
 
-<%= render 'shared/comments', commentable: @report%>
+<%= render 'shared/comments', commentable: @report %>
 
 <%= link_to t('views.common.edit'), edit_report_path(@report) %> |
 <%= link_to t('views.common.back'), reports_path %>
