--- a/app/views/shared/_comments.html.erb
+++ b/app/views/shared/_comments.html.erb
@@ -1,5 +1,5 @@
 <div><%= t('views.common.comment') %></div>
 <%= form_with model: [commentable, commentable.comments.new], local: true do |f| %>
   <%= f.text_field :content, required: true %>
-  <%= f.submit t('views.common.create') %>
+  <%= f.submit t('views.common.create_comment') %>
 <% end %>
