--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,12 +20,12 @@
 
     <p class="navbar-text float-right">
     <% if user_signed_in? %>
-      Logged in as <strong><%= current_user.email %></strong>.
-      <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
-      <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+      <%= t 'views.common.logeed_in_as' %><strong><%= current_user.email %></strong>.
+      <%= link_to t('views.common.edit_profile'), edit_user_registration_path, :class => 'navbar-link' %> |
+      <%= link_to t('.views.common.log_out'), destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
     <% else %>
-      <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
-      <%= link_to "Login", new_user_session_path, :class => 'navbar-link'%>
+      <%= link_to t('views.common.sign_up'), new_user_registration_path, :class => 'navbar-link'  %> |
+      <%= link_to t('views.common.log_in'), new_user_session_path, :class => 'navbar-link'%>
     <% end %>
     </p>
 
