--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,7 +10,7 @@
 
   <div class="field">
     <%= f.label :postal_code %><br />
-    <%= f.text_field :address, autofocus: true, autocomplete: "postal_code" %>
+    <%= f.text_field :postal_code, autofocus: true, autocomplete: "postal_code" %>
   </div>
 
   <div class="field">
@@ -19,8 +19,8 @@
   </div>
 
   <div class="field">
-    <%= f.label :bio %><br />
-    <%= f.text_field :bio, autofocus: true, autocomplete: "bio" %>
+    <%= f.label :self_introduction %><br />
+    <%= f.text_field :self_introduction, autofocus: true, autocomplete: "self_introduction" %>
   </div>
 
   <div class="field">
