--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -34,19 +34,8 @@
 </p>
 
 <div class="stats">
-  <a href="<%= following_user_path(@user) %>">
-    <strong id="following" class="stat">
-      <%= @user.followings.count %>
-    </strong>
-    following
-  </a>
-
-  <a href="<%= followers_user_path(@user) %>">
-    <strong id="followers" class="stat">
-      <%= @user.followers.count %>
-    </strong>
-    followers
-  </a>
+  <%= @user.followings.count %><%= link_to t('views.common.followings'), following_user_path(@user) %>
+  <%= @user.followers.count %><%= link_to t('views.common.followers'), followers_user_path(@user) %>
 </div>
 
 <% unless current_user == @user %>
