--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -41,12 +41,12 @@
 <% unless current_user == @user %>
   <div id="follow_form">
   <% if current_user.following?(@user) %>
-    <%= form_with(url: user_follow_relationship_path(@user), method: :delete, remote: true ) do |f| %>
+    <%= form_with(url: user_follow_relationship_path(@user), method: :delete, remote: true) do |f| %>
       <%= f.submit "Unfollow", class: "btn" %>
     <% end %>
   <% else %>
     <%= form_with(url: user_follow_relationships_path(@user), remote: true) do |f| %>
-      <div><%= hidden_field_tag :followed_id, @user.id %></div>
+      <%= hidden_field_tag :followed_id, @user.id %>
       <%= f.submit "Follow", class: "btn btn-primary" %>
     <% end %>
   <% end %>
