--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -42,12 +42,11 @@
   <div id="follow_form">
   <% if current_user.following?(@user) %>
     <%= form_with(url: user_follow_relationship_path(@user), method: :delete) do |f| %>
-      <%= f.submit "Unfollow", class: "btn" %>
+      <%= f.submit t('views.common.unfollow'), class: "btn" %>
     <% end %>
   <% else %>
     <%= form_with(url: user_follow_relationships_path(@user)) do |f| %>
-      <%= hidden_field_tag :followed_id, @user.id %>
-      <%= f.submit "Follow", class: "btn btn-primary" %>
+      <%= f.submit t('views.common.follow'), class: "btn btn-primary" %>
     <% end %>
   <% end %>
   </div>
